--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -74,7 +74,7 @@ main {
     font-size: 1.1rem;
     cursor: pointer;
 }
-.header > img {
+.header > svg {
     justify-self: left;
     padding-left: 20px;
     align-self: center;
@@ -659,9 +659,9 @@ label[for = "theme_feedback"] {
     width: -moz-max-content;
     padding: 10px 20px;
     left: 50%;
-    transform: translate(-50%, 0);
-    -webkit-transform: translate(-50%, 0);
-    -moz-transform: translate(-50%, 0);
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
     background: var(--main-color);
     color: white;
     opacity: 0;
@@ -878,33 +878,42 @@ label[for = "theme_feedback"] {
 }
 
 ::-webkit-scrollbar {
-    background-color: #fff;
-    width: 10px;
-    /* display: none; */
+    background-color:#fff;
+    width:16px;
+    display: none;
 }
 
 /* background of the scrollbar except button or resizer */
 ::-webkit-scrollbar-track {
-    background-color: #fff;
+    background-color:#fff
 }
 ::-webkit-scrollbar-track:hover {
-    background-color: #fff;
+    background-color:#f4f4f4
 }
 
 /* scrollbar itself */
 ::-webkit-scrollbar-thumb {
-    background-color: #babac0;
-    border-radius: 10px;
-    border: 2px solid #fff;
+    background-color:#babac0;
+    border-radius:16px;
+    border:5px solid #fff
 }
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #a0a0a5;
-    border: 2px solid #f4f4f4;
+    background-color:#a0a0a5;
+    border:4px solid #f4f4f4
 }
 
 /* set button(top and bottom of the scrollbar) */
-::-webkit-scrollbar-button {
-    display: none
+::-webkit-scrollbar-button {display:none}
+
+.main-container::-webkit-scrollbar{
+    display: block;
+}
+
+
+
+
+.icon{
+    fill: var(--main-color);
 }
 
 .white {
@@ -1005,12 +1014,15 @@ button {
     background-color: rgb(150, 150, 150);
     box-shadow: inset -6px -6px 10px rgba(150, 150, 150, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.2);;
 }
-/* .remove-review{
-    display: none;
-} */
+.logo-color{
+    fill: var(--main-color)
+}
 @media(max-width: 600px) {
     * {
         box-sizing: border-box;
+    }
+    ::-webkit-scrollbar{
+        display: block;
     }
     main{
         min-width: 0;
@@ -1030,8 +1042,9 @@ button {
         justify-items: left;
         align-items: center;
     }
-    .header > img{
+    .header > svg{
         height: 5.6vh;
+        padding-left: 15px;
     }
     .header > button {
         justify-self: right;
