--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -5,6 +5,7 @@
     --main-shadow-hover: inset -6px -6px 10px rgba(39, 132, 251, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.2);
     --neon-button-hover: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4;
 }
+
 .collapsible-body {
     display: none;
     -webkit-box-sizing: border-box;
@@ -1275,17 +1276,6 @@ button {
         margin-top: 5.5vh;
         margin-bottom: 5vh;
     }
-    /* .feedback-question{
-        font-size: 1rem;
-        word-wrap: break-word;
-        overflow-wrap: break-word;
-        max-width: 20%;
-        overflow-x: hidden;
-    }
-    .feedback-result-grid{
-        width: 80vw;
-        margin: 10px auto;
-    } */
     .mobile {
         display: block;
     }
@@ -1293,5 +1283,7 @@ button {
         display: grid;
     }
 }
-
+button::-moz-focus-inner {
+    border: 0;
+}
 
