--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1298,4 +1298,10 @@ button {
 button::-moz-focus-inner {
     border: 0;
 }
-
+.Opt-match{
+    border: solid red 1.5px;
+    
+}
+.Opt-match::placeholder{
+    color: red;
+}
