--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -38,8 +38,6 @@ ul{
     padding: 0;
     /* box-sizing: border-box; */
     font-family: 'Montserrat', sans-serif;
-    scrollbar-width: thin;
-    scrollbar-color: auto #ffffff;
 }
 body {
     position: relative;
@@ -631,18 +629,13 @@ label[for = "theme_feedback"] {
     width: -moz-fit-content;
     list-style-type: disc;
 }
-.actions > p{
+.actions > li{
     cursor: pointer;
-    padding-bottom: 13px;
-}
-.actions > p:last-child{
-    padding-bottom: 0;
 }
 
 .possible-actions{
     position: relative;
-    width: fit-content;
-    width: -moz-fit-content;
+    width: 50%;
     min-width: 300px;
     display: grid;
     grid-template-columns: auto auto auto;
@@ -651,13 +644,8 @@ label[for = "theme_feedback"] {
     padding: 10px 0;
 }
 .possible-actions > button{
-    font-size: 0.9rem;
-    padding: 7px 30px;
-    border-radius: 10px;
-    margin: 0 20px;
-}
-.possible-actions > button:nth-child(1){
-    margin-left: 0;
+    font-size: 0.8rem;
+    padding: 7px 10px;
 }
 
 
