--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1,4 +1,3 @@
-
 :root {
     --main-color: #2784FB;
     --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, 0.2);
@@ -38,6 +37,8 @@ ul{
     padding: 0;
     /* box-sizing: border-box; */
     font-family: 'Montserrat', sans-serif;
+    scrollbar-width: thin;
+    scrollbar-color: auto #ffffff;
 }
 body {
     position: relative;
@@ -389,8 +390,6 @@ main {
     margin-top: 20px;
     margin-left: 20px;
     cursor: pointer;
-    position: absolute;
-    z-index: 100;
 }
 .back-btn > img {
     width: 30px;
@@ -580,8 +579,6 @@ label[for = "theme_feedback"] {
 }
 .feedback-details > h1{
     margin-bottom: 30px;
-    max-width: 70vw;
-    overflow-wrap: break-word;
 }
 .feedback-answer{
     position: relative;
@@ -629,13 +626,18 @@ label[for = "theme_feedback"] {
     width: -moz-fit-content;
     list-style-type: disc;
 }
-.actions > li{
+.actions > p{
     cursor: pointer;
+    padding-bottom: 13px;
+}
+.actions > p:last-child{
+    padding-bottom: 0;
 }
 
 .possible-actions{
     position: relative;
-    width: 50%;
+    width: fit-content;
+    width: -moz-fit-content;
     min-width: 300px;
     display: grid;
     grid-template-columns: auto auto auto;
@@ -644,8 +646,13 @@ label[for = "theme_feedback"] {
     padding: 10px 0;
 }
 .possible-actions > button{
-    font-size: 0.8rem;
-    padding: 7px 10px;
+    font-size: 0.9rem;
+    padding: 7px 30px;
+    border-radius: 10px;
+    margin: 0 20px;
+}
+.possible-actions > button:nth-child(1){
+    margin-left: 0;
 }
 
 
@@ -761,16 +768,6 @@ label[for = "theme_feedback"] {
 
 .quiz-summary, .poll-summary, .feedback-summary{
     display: none;
-    position: absolute;
-    width: 80%;
-    height: 80%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    background: white;
-    box-shadow: var(--main-shadow);
 }
 
 .Quiz-internal, .Poll-internal, .Feedback-internal{
@@ -779,12 +776,7 @@ label[for = "theme_feedback"] {
 .current-quiz-deets, .current-poll-deets, .current-feedback-deets{
     display: block;
     width: 90%;
-    margin: 0 auto;
-    margin-top: 30px;
-    overflow: scroll;
-}
-.current-quiz-deets::-webkit-scrollbar, .current-poll-deets::-webkit-scrollbar, .current-feedback-deets::-webkit-scrollbar{
-    display: block;
+    margin: auto;
 }
 .quiz-title, .poll-title,.feedback-title{
     margin-top: 20px;
@@ -810,10 +802,15 @@ label[for = "theme_feedback"] {
 }
 .publish-btn{
     position: relative;
+    left: 50%;
+    margin: 70px 0;
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
 }
 .extra-quiz-deets,.extra-poll-deets{
     position: relative;
-    overflow: scroll;
+
 }
 .loading-gif{
     height: 1.0rem;
@@ -890,17 +887,7 @@ label[for = "theme_feedback"] {
 .grid-area-apply{
     grid-area: abs;
 }
-.grid-layer{
-    position: relative;
-    display: grid;
-    height: 100%;
-    grid-template-rows: auto auto;
-    justify-items: center;
-}
-.grid-layer > button{
-    align-self: center;
-    margin-bottom: 10px;
-}
+
 ::-webkit-scrollbar {
     background-color:#fff;
     width:16px;
@@ -1040,9 +1027,6 @@ button {
 }
 .logo-color{
     fill: var(--main-color)
-}
-.opacity-dec{
-    opacity: 0.5;
 }
 @media(max-width: 600px) {
     * {
@@ -1312,4 +1296,11 @@ button {
 }
 button::-moz-focus-inner {
     border: 0;
+}
+.Opt-match{
+    border: solid red 1.5px;
+    
+}
+.Opt-match::placeholder{
+    color: red;
 }
