--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -343,7 +343,7 @@ main {
     text-align: center;
 }
 .event-create-container > h1 {
-    padding-top: 6vh;
+    padding-top: 10vh;
     margin-bottom: 40px;
     position: relative;
     font-size: 2.2rem;
@@ -384,6 +384,7 @@ main {
     -webkit-transform: none;
     -moz-transform: none;
     width: fit-content;
+    width: moz-max-content;
     border: none;
     outline: none;
     background: white;
@@ -391,9 +392,7 @@ main {
     margin-left: 20px;
     cursor: pointer;
 }
-.back-btn > img {
-    width: 30px;
-}
+
 #event-code {
     display: none;
 }
@@ -1028,6 +1027,14 @@ button {
 .logo-color{
     fill: var(--main-color)
 }
+.event-loader{
+    margin-top: 10vh;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+}
 @media(max-width: 600px) {
     * {
         box-sizing: border-box;
@@ -1152,6 +1159,9 @@ button {
         width: -moz-max-content;
         margin: auto;
         
+    }
+    .back-btn{
+        position: relative;
     }
     .nav-container > p{
         margin: 15px 0; 
@@ -1303,4 +1313,14 @@ button::-moz-focus-inner {
 }
 .Opt-match::placeholder{
     color: red;
+}
+.back-icon{
+    font-size: 2.5rem;
+    transition: transform 0.2s;
+    transform-origin: center;
+    transform: scale(1.0)
+}
+.back-icon:hover{
+    color: rgb(126, 126, 126);
+    transform: scale(1.1);
 }
