--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -664,7 +664,9 @@ label[for = "theme_feedback"] {
     margin-left: 0;
 }
 
-
+.feedback-loader, .quiz-loader, .poll-loader{
+    display: none;
+}
 
 
 
