--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1,5 +1,5 @@
 :root {
-    --main-color: #2784FB;
+    --main-color: rgb(40, 131, 251);
     --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, 0.2);
     --main-shadow-hover: inset -6px -6px 10px rgba(39, 132, 251, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.2);
     --neon-button-hover: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4;
