--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1,8 +1,7 @@
 :root {
     --main-color: rgb(40, 131, 251);
-    --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, 0.2);
-    --main-shadow-hover: inset -6px -6px 10px rgba(39, 132, 251, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.2);
-    --neon-button-hover: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4;
+    --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.02), 5px 5px 15px rgba(0, 0, 0, 0.1);
+    --main-shadow-hover: inset -6px -6px 10px rgba(39, 132, 251, 0.5), inset 6px 6px 20px rgba(0, 0, 0, 0.1);
 }
 .html{
     scroll-behavior: smooth;
@@ -122,8 +121,9 @@ main {
 }
 .content {
     display: none;
-    height: fit-content;
-    height: -moz-max-content;
+    /* height: fit-content;
+    height: -moz-max-content; */
+    height: 100%;
     width: 100%;
 }
 
@@ -346,6 +346,7 @@ main {
     margin: auto;
     height: 100%;
     text-align: center;
+    height: auto;
 }
 .event-create-container > h1 {
     padding-top: 10vh;
@@ -412,6 +413,7 @@ main {
     display: block;
     /* padding-top: 13vh; */
     display: none;
+    padding-bottom: 100px;
 }
 .quiz-question-create{
     display: grid;
@@ -736,10 +738,6 @@ label[for = "theme_feedback"] {
 .name-div{
     position: relative;
     margin-top: 19vh;
-    /* top: 50vh;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%); */
     padding: 50px 50px;
     background: #F5F5F5;
     border-radius: 10px;
@@ -748,6 +746,7 @@ label[for = "theme_feedback"] {
     grid-template-columns: 20% 80%;
     grid-template-areas:"abs abs" "l1 i1" "b b";
     /* justify-items: center; */
+    margin: auto;
 }
 .name-div > input{
     grid-area: i1;
@@ -804,6 +803,7 @@ label[for = "theme_feedback"] {
 
 .Quiz-internal, .Poll-internal, .Feedback-internal{
     display: none;
+    height: 100%;
 }
 .current-quiz-deets, .current-poll-deets, .current-feedback-deets{
     display: block;
@@ -834,11 +834,11 @@ label[for = "theme_feedback"] {
 }
 .publish-btn{
     position: relative;
-    left: 50%;
+    /* left: 50%;
     margin: 70px 0;
     transform: translate(-50%, 0);
     -webkit-transform: translate(-50%, 0);
-    -moz-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0); */
 }
 .extra-quiz-deets,.extra-poll-deets{
     position: relative;
@@ -915,8 +915,8 @@ label[for = "theme_feedback"] {
     font-size: 1.3rem;
 }
 .create-section{
-    margin-top: 7vh;
-    margin-bottom: 50px;
+    margin-top: 4vh;
+    margin-bottom: 40px;
     
 }
 .grid-area-apply{
@@ -941,8 +941,8 @@ label[for = "theme_feedback"] {
 .question-header > i{
     justify-self: right;
 }
-.quiz-create-container > li{
-    margin: 30px 0;
+.quiz-collapsible > li{
+    margin-top:20px;
 }
 .quiz-question-create {
     box-shadow: var(--main-shadow);
@@ -954,7 +954,18 @@ label[for = "theme_feedback"] {
 .del-btn{
     display: none;
 }
-
+.final-quiz-actions{
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    margin: 30px auto;
+    grid-template-columns: auto auto;
+    column-gap: 20px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
+    -moz-transform: translate(-50%, 0%);
+}
 
 ::-webkit-scrollbar {
     background-color:#fff;
@@ -1005,6 +1016,7 @@ button {
 }
 .create {
     display: none;
+    height: 100%;
 }
 .result {
     display: none;
