--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1324,6 +1324,7 @@ button {
         text-align: center;
         font-weight: 700;
         font-size: 1.1rem;
+        padding: 5px;
     }
     .icons {
         width: 100%;
