--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -978,7 +978,7 @@ label[for = "theme_feedback"] {
     position: absolute;
     bottom: 0;
     display: grid;
-    margin: 10px auto auto;
+    margin: 0px auto;
     padding: 20px 20px;
     padding: 20px;
     border-radius: 15px;
@@ -994,6 +994,7 @@ label[for = "theme_feedback"] {
     -webkit-transform: translate(-50%, 0%);
     -moz-transform: translate(-50%, 0%);
     box-shadow: var(--main-shadow);
+    width: 80%;
 }
 .final-quiz-actions > p,
 .final-poll-actions > p {
