--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1186,12 +1186,33 @@ button {
     background-color: #F;
     box-shadow: none;
 } */
+
+
+
+
+@media(max-width: 1065px){
+    .final-quiz-actions{
+        width: 90%;
+    }
+    .theme-text{
+        font-size: 0.8rem;
+    }
+}
+
+
+
+
+
+
 @media(max-width: 600px) {
     * {
         box-sizing: border-box;
     }
     ::-webkit-scrollbar {
         display: block;
+    }
+    .theme-text{
+        font-size: initial;
     }
     body {
         height: calc(var(--vh, 1vh) * 100);
