--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1049,7 +1049,7 @@ label[for = "theme_feedback"] {
     display: none
 }
 
-.main-container::-webkit-scrollbar {
+.main-container::-webkit-scrollbar{
     display: block;
 }
 
@@ -1266,6 +1266,7 @@ button {
     } */
     .user-login-container {
         width: 95%;
+
     }
     .user-login-container > h1 {
         font-size: 2rem;
@@ -1317,8 +1318,8 @@ button {
         z-index: 10;
         clip-path: circle(10px at -5% 10%);
         -webkit-clip-path: circle(10px at -5% 10%);
-        transition: clip-path ease-out 1s;
-        -webkit-transition: -webkit-clip-path ease-out 1s;
+        transition: clip-path ease-out 0.8s;
+        -webkit-transition: -webkit-clip-path ease-out 0.8s;
         background: white;
     }
     .question-header > i{
@@ -1334,8 +1335,8 @@ button {
         font-weight: 600;
     }
     .open {
-        clip-path: circle(2500px at 100.7% 3.5%);
-        -webkit-clip-path: circle(2500px at 100.7% 3.5%);
+        clip-path: circle(1500px at 100.7% 3.5%);
+        -webkit-clip-path: circle(1500px at 100.7% 3.5%);
     }
     .nav-container {
         position: relative;
@@ -1542,6 +1543,12 @@ button {
     }
     .mobile-grid {
         display: grid;
+    }
+    .main-container-padding{
+        margin-top: 5vh;
+    }
+    .event > p > i{
+        display: none;
     }
     
 }
