--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -84,8 +84,9 @@ main {
     justify-self: left;
     padding-left: 20px;
     align-self: center;
-    height: 7vh;
-
+    width: 20vw;
+    max-width: 215px;
+    min-width: 160px;
 
 }
 .header > button {
@@ -188,7 +189,7 @@ main {
     font-weight: 900;
     font-size: 1.2rem;
 }
-#user_email {
+.user-email {
     grid-area: input1;
     margin-top: 60px;
     margin-bottom: 30px;
@@ -199,7 +200,7 @@ main {
     /* box-shadow: var(--main-shadow); */
     outline: none;
 }
-#user_pass {
+.user-pass {
     grid-area: input2;
     width: calc(90% - 10px);
     margin-bottom: 30px;
@@ -1279,6 +1280,9 @@ button {
     .header > svg {
         height: 70%;
         padding-left: 15px;
+        min-width: initial;
+        width: initial;
+        max-width: initial;
     }
     .header > button {
         justify-self: right;
